<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2157"
    tools:context=".ui.settings.HelpFragment">


    <!-- Page Title -->
    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_faq_title"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <LinearLayout
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- FAQ Item 1 -->
        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/btnFaq1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q1"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"/>

        <TextView
            android:id="@+id/tvFaq1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a1"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

        <!-- FAQ Item 2 -->
        <Button
            android:id="@+id/btnFaq2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q2"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvFaq2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a2"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

        <!-- FAQ Item 3 -->
        <Button
            android:id="@+id/btnFaq3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q3"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvFaq3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a3"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

        <!-- FAQ Item 4 -->
        <Button
            android:id="@+id/btnFaq4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q4"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvFaq4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a4"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

        <!-- FAQ Item 5 -->
        <Button
            android:id="@+id/btnFaq5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q5"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvFaq5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a5"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

        <!-- FAQ Item 6 -->
        <Button
            android:id="@+id/btnFaq6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q6"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvFaq6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a6"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

        <!-- FAQ Item 7 -->
        <Button
            android:id="@+id/btnFaq7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_q7"
            android:backgroundTint="#432F73"
            android:textColor="@android:color/white"
            android:gravity="start|center_vertical"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tvFaq7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq_a7"
            android:textColor="#E0DAF5"
            android:padding="12dp"
            android:visibility="gone"
            android:background="#432F73"
            android:layout_marginBottom="12dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
